--- a/.env
+++ b/.env
@@ -4,11 +4,20 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL='postgresql://postgres:JLjnIUwMW47XDmhP@db.llbtvgroomoismdzmhgg.supabase.co:5432/postgres' 
 
+DATABASE_URL="mongodb+srv://weitzeltati:Gjm4cq9yP6Hk8AtA@cluster0.uby2r5r.mongodb.net/teste"
+
+
+
+
+
+# 'postgres://postgres:JLjnIUwMW47XDmhP@db.llbtvgroomoismdzmhgg.supabase.co:5432/postgres' 
 # JLjnIUwMW47XDmhP
 NEXT_API_URL = https://api.punkapi.com/v2/beers
 
 
 GOOGLE_ID =559543349856-a5alc9acekigsod335e177ehjb57s31n.apps.googleusercontent.com
 GOOGLE_SECRET =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
+
+
+NEXTAUTH_SECRET='oimlDVS2pMRluzZwE76zZ+zaELZehSPc5oxl+B6QYAI='
