--- a/package.json
+++ b/package.json
@@ -9,14 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/mongodb-adapter": "^2.0.0",
+    "@auth/prisma-adapter": "^1.0.2",
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.3.1",
+    "@supabase/supabase-js": "^2.37.0",
     "@vercel/postgres": "^0.5.0",
     "bcrypt": "^5.1.1",
+    "bson": "^6.1.0",
+    "mongodb": "^6.1.0",
     "next": "latest",
-    "next-auth": "^4.23.1",
     "react": "latest",
     "react-dom": "latest",
-    "react-icons": "^4.11.0"
+    "react-icons": "^4.11.0",
+    "react-intersection-observer": "^9.5.2"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
