--- a/.env
+++ b/.env
@@ -1,17 +1,13 @@
 
 
 
-DATABASE_URL=""
-
-
-
-
-
-NEXT_API_URL = https://api.punkapi.com/v2/beers
-
+DATABASE_URL=
 
 GOOGLE_ID =
 GOOGLE_SECRET =
 
 
-NEXTAUTH_SECRET=''
+NEXTAUTH_SECRET=
+
+NEXT_API_URL = https://api.punkapi.com/v2/beers
+
