--- a/package.json
+++ b/package.json
@@ -13,11 +13,10 @@
     "@auth/prisma-adapter": "^1.0.2",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.3.1",
-    "@supabase/supabase-js": "^2.37.0",
-    "@vercel/postgres": "^0.5.0",
     "bcrypt": "^5.1.1",
     "bson": "^6.1.0",
     "mongodb": "^6.1.0",
+    "mongoose": "^7.5.3",
     "next": "latest",
     "react": "latest",
     "react-dom": "latest",
@@ -31,7 +30,6 @@
     "@types/react-dom": "latest",
     "autoprefixer": "latest",
     "postcss": "latest",
-    "prisma": "^5.3.1",
     "tailwindcss": "latest",
     "typescript": "latest"
   }
